# arenafalcom

./: .gitignore  README.md
workshop/: .claude-config.json  .codeedit-config.json  .codex.toml  .gitignore  .session_state.json  COMANDO_FINAL.sh  CONTINUE_HERE.md  DL_INTEGRATION_PROPOSAL.md  DL_QUICKSTART.md  DL_WORKFLOW_STATUS.md  DOWNLOAD_2_ANOS_COMPLETO.sh  DOWNLOAD_TURBO.sh  ESTUDO_COMPLETO_SELECTOR.md  EVOLUTION_SUMMARY.md  FINAL_RESULTS.md  GPU_WORKFLOW.md  GUIA_TESTNET.md  INSTALL.md  INTEGRATION_SUMMARY.md  JOURNAL.txt  LEARNING_SELECTOR_PROFUNDO.md  MAESTRO_ARCHITECTURE.md  ML_DL_STRATEGY.md  Makefile  PAPER_TRADING_GUIDE.md  PROXIMO_PASSO_DOWNLOADS.md  QUICKSTART.md  QUICKSTART_NEXT_AI.md  QUICK_START.md  QUICK_START.sh  RAPID_LEARNING_SUMMARY.md  README.md  README_CLAUDEX.md  README_CODEX.md  README_DOWNLOADS.md  RELATORIO_SESSAO_GPU.md  REORGANIZACAO_SUMARIO.md  RESULTADOS_FINAIS.md  RESUMO_NOVOS_DADOS.md  SECURITY_POLICY.md  (+101 more)
workshop/backend/: data_pipeline.py  exec_model.py  openai_gateway.py  pipeline.py  regime_gates.py  system_prompts.py  tv_backend.py
workshop/claudex/: CONVERSAS_README.md  DUPLA_COMO_SE_MOLDAM.md  FEEDBACK_SYSTEM.md  LEARNING_LOG.jsonl  MECANISMO_MOLDAGEM.py  PERMISSIONS_UNRESTRICTED.md  README.md  claudex_prompt.md  dupla_aprendizado.py  dupla_apresentacao.py  dupla_conversa.py  dupla_conversa_fast.py  feedback_em_acao.py  security_log.jsonl
workshop/docs/: AGENTS_PROFILE.md  CAPACIDADES_IAS.md  CODEX_MODES.md  COMPETITION_MODE.md  COMPLETE_SYSTEM.md  DATA_PREPARATION_GUIDE.md  DIALOGUE-SPEC.md  DOWNLOAD_RAPIDO_BINANCE.md  (+13 more)
(+139 files in other folders)
