[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "botscalp"
version = "0.1.0"
description = "BotScalp V3 research & execution stack"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Falcom Labs" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: POSIX :: Linux",
]

[project.scripts]
botscalp-select = "core.selectors.cli:main"
botscalp-dl = "core.dl.cli:main"
botscalp-orch = "core.orchestration.cli:main"
